# fluir

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  cmake-format.py
bytecode/: CMakeLists.txt  version.hpp.in
bytecode/include/byte_code/: instruction.hpp
bytecode/include/bytecode/: byte_code.hpp  code_chunk.hpp  instruction.hpp  op_code.hpp  primitives.hpp  value.h  value.hpp  version.hpp
bytecode/modules/: byte_code.ixx  code_chunk.ixx  instruction.ixx
bytecode/test/: CMakeLists.txt  value.test.cpp
compiler/: CMakeLists.txt
compiler/include/compiler/: scope_guard.hpp
compiler/include/compiler/backend/: bytecode_generator.hpp  code_writer.hpp  inspect_writer.hpp
compiler/include/compiler/debug/: asg_printer.hpp  ast_printer.hpp  parse_tree_printer.hpp
compiler/include/compiler/frontend/: asg_builder.hpp  ast_builder.hpp  parser.hpp  text_parse.hpp  type_checker.hpp
compiler/include/compiler/models/: asg.hpp  id.hpp  literal_types.hpp  location.hpp  operator.hpp
compiler/include/compiler/types/: builtin_symbols.hpp  conversion.hpp  operator.hpp  operator_def.hpp  symbol_table.hpp  type.hpp  typeid.hpp
compiler/include/compiler/utility/: context.hpp  diagnostics.hpp  indent_formatter.hpp  pass.hpp  results.hpp
compiler/include/fluir/compiler/: ast.hpp  diagnostic.hpp  parser.hpp
compiler/src/: CMakeLists.txt  dummy.cpp  main.cpp  parser.cpp
compiler/src/ast/: function_declaration.cpp
compiler/src/backend/: backend.ixx  bytecode_generator.cpp  bytecode_generator.ixx  code_writer.cpp  code_writer.ixx  inspect_writer.cpp  inspect_writer.ixx
compiler/src/debug/: asg_printer.cpp  asg_printer.ixx  ast_printer.cpp  debug.ixx  parse_tree_printer.cpp
compiler/src/frontend/: asg_builder.cpp  asg_builder.ixx  ast_builder.cpp  frontend.ixx  parse_tree.ixx  parser.cpp  parser.ixx  text_parse.cpp  type_checker.cpp
compiler/src/models/: asg.ixx  id.ixx  location.ixx  operators.ixx
compiler/src/models/asg/: declaration.ixx  node.ixx
compiler/src/types/: builtin_symbols.cpp  conversion.cpp  operator.cpp  operator_definition.cpp  symbol_table.cpp  type.cpp
compiler/src/utility/: context.ixx  diagnostics.cpp  diagnostics.ixx  indent_formatter.ixx  pass.ixx  results.ixx
compiler/test/: CMakeLists.txt  asg.test.cpp  asg_errors.test.cpp  bytecode_assertions.hpp  detect_syntax_errors.test.cpp  diagnostics.test.cpp  file_utility.hpp  parser.test.cpp  scope_guard.test.cpp
compiler/test/asg/: asg.test.cpp  asg_errors.test.cpp  asg_parser_integration.test.cpp
compiler/test/ast/: asg.test.cpp  asg_parser_integration.test.cpp
compiler/test/backend/: bytecode_generator.test.cpp  inspect_writer.test.cpp
compiler/test/frontend/: parse_number.test.cpp  type_checker.test.cpp
compiler/test/programs/asg/: int_types.asg  int_types.fl  simple_program.asg  simple_program.fl  uint_types.asg
compiler/test/programs/build_asg_errors/: circular_dependency_lower_level.fl  circular_dependency_no_top_level.errors  circular_dependency_no_top_level.fl
compiler/test/programs/parse/: empty_main.fl  empty_main.pt  expressions_with_conduits.fl  expressions_with_conduits.pt  int_types.pt  simple_binary_expression.fl  simple_binary_expression.pt  simple_unary_expression.fl  simple_unary_expression.pt  uint_types.fl  uint_types.pt
compiler/test/programs/syntax_error/: bad_root_element.errors  bad_root_element.fl  conduit_node_id_duplicate.errors  conduit_node_id_duplicate.fl  constant_missing_attributes.errors  constant_missing_attributes.fl  duplicate_function_ids.errors  duplicate_function_ids.fl  duplicate_ids_in_block.errors  duplicate_ids_in_block.fl  function_missing_attributes.errors  function_missing_attributes.fl  function_missing_body.errors  function_missing_body.fl  invalid_double_value.errors  invalid_double_value.fl  invalid_int.errors  invalid_int.fl  invalid_operator.errors  invalid_operator.fl  invalid_value_type.errors  invalid_value_type.fl  reports_errors_in_several_nodes.errors  reports_errors_in_several_nodes.fl  unknown_declaration.errors  unknown_declaration.fl
compiler/test/types/: builtin_symbols.test.cpp  overload_resolution.test.cpp  symbol_table.test.cpp  type.test.cpp
compiler/test/utility/: diagnostics.test.cpp  pass.test.cpp  results.test.cpp
editor/server/: .gitignore  build.py  main.py  pyproject.toml
editor/server/editor/: main.py
editor/server/editor/controllers/: __init__.py  module_controller.py
editor/server/editor/models/: __init__.py  edit_errors.py  elements.py  id.py  module_requests.py  module_responses.py  transaction.py
editor/server/editor/repository/: fluir_file.py
editor/server/editor/services/: __init__.py  module_editor.py  transaction.py
editor/server/editor/utility/: next_id.py
editor/server/test/controllers/: test_module_controller.py
editor/server/test/repository/: test_find_element.py  test_parse_file_to_struct.py  test_write_struct_to_file.py
launcher/: .gitignore  build.py  fluir-config.yaml  fluir.desktop.in  fluir_launcher.py  pyproject.toml
src/: CMakeLists.txt  afg.cpp  afg_builder.cpp  diagnostic.cpp  parser.cpp
src/afg/: constant.cpp  flow_graph.cpp  operation.cpp
test/: CMakeLists.txt  afg.test.cpp  afg_nodes.test.cpp  diagnostics.test.cpp  dummy.test.cpp  parser.test.cpp
test/afg/: dependency.test.cpp  flow_graph.test.cpp  nodes.test.cpp
test/programs/parser_error/: constant_missing_attributes.errors  constant_missing_attributes.fl  duplicate_function_ids.fl  duplicate_ids_in_block.fl  function_missing_attributes.fl  invalid_double_value.errors  invalid_double_value.fl  invalid_operator.errors  reports_errors_in_several_nodes.errors  unknown_declaration.errors  unknown_declaration.fl
vm/src/: CMakeLists.txt  decode.cpp  main.cpp  validate.cpp  vm.cpp  vm.ixx
vm/src/decoder/: decode.cpp  decode.ixx  inspect.cpp  inspect.ixx
vm/test/: CMakeLists.txt  bytecode_assertions.hpp  casting.test.cpp  decode.test.cpp  primitive_ops.test.cpp  validate.test.cpp  vm.test.cpp
vm/test/decoder/: decode.test.cpp  inspect.test.cpp
(+208 files in other folders)
