[project]
name = "fluir.editor"
version = "0.1.0"
dependencies = [
    "fastapi==0.115.12",
    "lxml==5.4.0",
    "lxml-stubs-0.5.1",
    "mypy==1.15.0",
    "pydantic==2.11.4",
    "pytest==8.3.5",
    "uvicorn==0.34.2",
]

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
strict = true
