[project]
name = "fluir.editor"
version = "0.1.0"
dependencies = [
    "fastapi==0.115.12",
    "httpx==0.28.1",
    "lxml==5.4.0",
    "mypy==1.15.0",
    "pydantic==2.11.4",
    "pytest==8.3.5",
    "uvicorn==0.34.2",
]

[project.optional-dependencies]
dev = [
    "lxml-stubs==0.5.1"
]
build = [
    "pyinstaller>=6.0",
    "setuptools>=61.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
strict = true
